k8s/cloudbeaver/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cloudbeaver
  namespace: cloudbeaver
spec:
  strategy:
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app: cloudbeaver
  template:
    metadata:
      labels:
        app: cloudbeaver
    spec:
      containers:
        - name: cloudbeaver
          image: dbeaver/cloudbeaver:26.2.2
          ports:
            - containerPort: 8978
          volumeMounts:
            - name: workspace
              mountPath: /opt/cloudbeaver/workspace
      volumes:
        - name: workspace
          persistentVolumeClaim:
            claimName: cloudbeaver-data
