k8s/cloudbeaver/service.yml
apiVersion: v1
kind: Service
metadata:
  name: cloudbeaver
  namespace: cloudbeaver
spec:
  selector:
    app: cloudbeaver
  ports:
    - port: 80
      targetPort: 8978
  type: ClusterIP
